# shelter

./: .gitignore  README.md  dune-project  shelter.opam  shelter.opam.template
attic/: dune  main.ml  task.ml
docs/: forest.toml
docs/src/: index.md  shelter-0001.md  shelter-0002.md  shelter-0003.md  shelter-0004.md  shelter-0005.md
src/common/: admin.ml  config.ml  dune  raw.ml  schema.capnp  session.ml  shelter_common.ml  user.ml
src/lib/: cshell.ml  dune  engine.ml  history.ml  shelter.ml
src/lib/passthrough/: cshell_passthrough.ml  cshell_passthrough.mli  dune  shelter_passthrough.ml
src/lib/shelter/: config.ml  diff.ml  dune  fetch.ml  runc.ml  shelter.ml  shelter.mli  shelter_main.ml  shelter_main.mli  store.ml  tools.ml
src/shelter/lib/: engine.ml  script.ml  shelter.ml
src/shelter/lib/passthrough/: shelter_passthrough.mli
src/shelter/lib/shelter/: dune  fetch.ml  shelter_main.mli  store.ml
src/shelterd/: dune  main.ml  store.ml
test/: dune
